@@ -3,6 +3,8 @@
 	* avtmsg.c, avtgrmsg.c, mingw/avtmsg.c: removed
 	all callers adapted
 
+	* example.c: simplified
+
 2012-01-28  Andreas K. Foerster  <info@akfoerster.de>
 
 	* avatar-audio.c (avt_load_au): code cleanup
